# braindump

./: README.md  pyproject.toml
braindump/: __init__.py  cli.py
braindump.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
