[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "braindump"
version = "0.1.0"
description = "A CLI tool for managing markdown journal entries"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyperclip>=1.8.0",
    "pyyaml>=6.0",
]

[project.scripts]
dump = "braindump.cli:app"

[tool.setuptools.packages.find]
where = ["."]
